# 3D803-V1

./: 3D.c  3D.h  CMakeLists.txt  Charger.c  Charger.h  Common.c  Common.h  Cpu.c  Cpu.h  E803-types.h  E803ops.c  E803ops.h  Emulate.c  Emulate.h  Gles.c  Gles.h  Gtk.c  Gtk.h  Hands.c  Hands.h  Keyboard.c  Keyboard.h  LICENCE  LoadPNG.c  LoadPNG.h  Logging.c  Logging.h  Main.c  ObjLoader.c  ObjLoader.h  PTS.c  PTS.h  Parse.c  Parse.h  PowerCabinet.c  PowerCabinet.h  README.md  ResetCMake  SAVEDSTATE  ShaderDefinitions.c  (+11 more)
803-Resources/: generic900x900.glade
803-Resources/objects/: Feb03.14.mtl  hand1.mtl  hand2.mtl
803-Resources/shaders/: HandFragmentShader.c  HandVertexShader.c  WGFragmentShader.c  WGVertexShader.c  XwiresFragmentShader.c  XwiresVertexShader.c  simpleFragmentShader.c  simpleTextureFragmentShader.c  simpleTextureVertexShader.c  simpleVertexShader.c  textureFragmentShader2.c  textureVertexShader.c  textureVertexShader2.c
